[package]
name = "hitman_contract_creator"
author = ["MicroBlock"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version="0.11.10",features = ["json"]}
tokio = { version = "1.18.1", features = ["full"] }
serde_json = "1.0.80"
uuid = {version = "*",features = ["v4"]}
clap = { git = "https://github.com/clap-rs/clap/" , features = ["derive"] }
fern = "0.6.1"
log="*"
chrono="*"
anyhow="*"
fastrand = "1.7.0"